# magnify_website

./: README.md  pyproject.toml
magnify_website/: manage.py
magnify_website/base/: urls.py  views.py
magnify_website/base/templates/base/: home.html  layout.html  product.html
magnify_website/magnify_website/: asgi.py  settings.py  urls.py  wsgi.py
magnify_website/staticfiles/css/: product.css
magnify_website_env/: pyvenv.cfg
