[tool.poetry]
name = "magnify-website"
version = "0.1.0"
description = "a great website, the best"
authors = ["brian <bheath015@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
